--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -23,7 +23,7 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 
 == Keep the Server Patched
 
-As with any &sles; system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
+As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
 You install these update with {yast} online update or with ``zypper up`` or ``zypper patch``).
 Preferable, you will run these commands during a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
