--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -53,7 +53,9 @@ This is the list of supported filters:
 No package dependency solving is done on content filtering.
 ====
 
-Depending on the Filter Type multiple ``Matchers`` are available. There exists:
+There are multiple matchers you can use with the filter.
+Which ones are available will depend on the filter type you choose.
+The full list is:
 
 * contains
 * matches (regexp)
