--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -58,7 +58,7 @@ Which ones are available will depend on the filter type you choose.
 The full list is:
 
 * contains
-* matches (regexp)
+* matches (must take the form of a regular expression)
 * equals
 * greater
 * greater or equal
