--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -1,19 +1,18 @@
 [[installation-proxy-unified]]
 = {productname} {productnumber} Proxy
 
-{susemgr} Proxy 4.0 is a {suse} product of the {sle} 15 product family.
+{susemgr} Proxy 4.0 is a {suse} product of the {sle} 15 product family.
 This section describes how to install {susemgr} Proxy from {sle} installation media.
-// Wondering whether we can mention here that when installation is finished you  must continue with registering the product as a suma client.
 
 // 2019-08-27, ke: I'd really like to add a section title here:
-// == Before You Begin
+== Before You Begin
 It assumes you have already registered the {susemgr} Proxy product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
 // REMARK: FIXME: here add a sentence about getting and using the Unified Installation
 
 // 2019-08-27, ke: I'd really like to add a section title here:
-// == Installation
+== Installation
 
 [NOTE]
 ====
