align with install-server-unified

--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -1,22 +1,16 @@
 [[installation-proxy-unified]]
 = {productname} {productnumber} Proxy
 
-{susemgr} Proxy 4.0 is a {suse} product of the {sle} 15 product family.
+{susemgr} Proxy 4.0 is a {suse} product within the {sle} 15 product family.
 This section describes how to install {susemgr} Proxy from {sle} installation media.
+For this topic we assume that you have already registered your {susemgr} Proxy product with {scc} and have obtained a registration code.
 
-// 2019-08-27, ke: I'd really like to add a section title here:
-== Before You Begin
-It assumes you have already registered the {susemgr} Proxy product with the {scc} and have a registration code.
+For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:general-requirements.adoc[].
 
-For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
-// REMARK: FIXME: here add a sentence about getting and using the Unified Installation
-
-// 2019-08-27, ke: I'd really like to add a section title here:
-== Installation
 
 [NOTE]
 ====
-If you want to install {susemgr} Proxy on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
+If you want to install {susemgr} Proxy on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[].
 ====
 
 {productname} {productnumber} Proxy is a {productname} add-on that caches software packages on an internal, central server.
