--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -24,7 +24,7 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 == Keep the Server Patched
 
 As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
-You install these update with {yast} online update or with ``zypper up`` or ``zypper patch``).
+You can install these update with {yast} online update (see SLE Admin, Common Tasks) or with ``zypper up`` or ``zypper patch`` (see SLE Admin, Common Tasks, Managing Software with Command Line Tools).
 Preferable, you will run these commands during a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
 By default, several update channels are configured and enabled on the {susemgr} Server.
