something to start with

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -24,10 +24,10 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 == Keep the Server Patched
 
 As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
-You can install these update with {yast} online update (see SLE Admin, Common Tasks) or with ``zypper up`` or ``zypper patch`` (see SLE Admin, Common Tasks, Managing Software with Command Line Tools).
-Preferable, you will run these commands during a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
+You can install these update with {yast} online update (see SLE Administration Guide, Chapter Common Tasks, https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html) or with ``zypper up`` or ``zypper patch`` (see SLE Administration Guide, Chapter Common Tasks, Section Managing Software with Command Line Tools, https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_zypper.html).
+Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
-By default, several update channels are configured and enabled on the {susemgr} Server.
+By default, several update channels are configured and enabled for the {susemgr} Server.
 Thus improved packages will become available automatically.
 Check whether the update channels are actually available:
 
@@ -54,16 +54,17 @@ SLE-Module-Web-Scripting15-SP1-Pool                    | Yes     | (r ) Yes  | N
 SLE-Module-Web-Scripting15-SP1-Updates                 | Yes     | (r ) Yes  | Yes    
 ----
 
-From time to time, all the package updates are bundled and released as a maintenance update.
-If you will install such a MU, the version number will get increased from say 4.0.1 to 4.0.2.
+Additionally, from time to time all the package updates are bundled and released as a maintenance update.
+If you want to  install such a MU, the version number of the {susemgr} product will get increased from 4.0.1 to 4.0.2, for example.
+You can verify the version number at the botton of the navigation bar.
 
-With zypper migration you will update from, say, version 4.0.x to 4.1.x:
+With [command]``zypper migration`` you will update the product from version 4.0.x to 4.1.x, for example:
 
 ----
 zypper migration
 ----
 
-This is also known as a Service Pack (SP) migration.
+This procedure is also known as a Service Pack (SP) migration.
 
-To keep SUMA 4 patched, you either connect directly to SCC or use RMT as a local installation source.
+To keep {susemgr} {productnumber} patched, you either connect it directly to {scc} (SCC) or use {rmtool} (RMT) as a local installation source.
 
