--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -53,7 +53,8 @@ You only require a valid registration code for {productname}.
 You do not require a separate code for {slsa}{nbsp}{sles-version} {sp-version}.
 endif::[]
 
-If not already done, download the {sle} Unified Installer from https://download.suse.com/index.jsp, with the search parameters included it is one for example: https://download.suse.com/index.jsp?product_id=&search=Search&families=22609&version=68287 (version{nbsp}15{nbsp}SP1 or higher).
+If not already done, download the {sle} Unified Installer from https://download.suse.com/index.jsp.
+Direct link to {sle} 15 SP1, required to install SUSE Manager 4.0: https://download.suse.com/index.jsp?product_id=&search=Search&families=22609&version=68287.
 With the Unified Installer you can install many SLE-based base products such as {slsa}, {slsa} for SAP Applications, or {susemgr}.
 
 
