--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -73,7 +73,7 @@ configure-proxy.sh
 
 == Re-Create Existing Certificates
 
-If your existing custom certificates have expired or stopped working for any reason, you can generate a new certificate from the existing CA.
+If your existing custom certificates have expired or stopped working for any reason, you can generate a new server certificate from the existing CA.
 
 .Procedure: Re-Creating an Existing Certificate
 
