--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -71,7 +71,7 @@ configure-proxy.sh
 
 
 
-== Re-Create Existing Certificates
+== Re-Create Existing Server Certificates
 
 If your existing custom certificates have expired or stopped working for any reason, you can generate a new server certificate from the existing CA.
 
