--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -75,7 +75,7 @@ configure-proxy.sh
 
 If your existing custom certificates have expired or stopped working for any reason, you can generate a new server certificate from the existing CA.
 
-.Procedure: Re-Creating an Existing Certificate
+.Procedure: Re-Creating an Existing Server Certificate
 
 . On the {productname} Server, at the command prompt, regenerate the server certificate:
 +
