--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -102,7 +102,7 @@ spacewalk-service restart
 
 
 
-== Create New Certificates
+== Create and Replace CA and Server Certificates
 
 If you need to create entirely new certificates for an existing installation, you will need to delete the old certificates before you begin.
 
