--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -42,7 +42,7 @@ We strongly recommend you install all updates before performing the upgrade.
 
 During the migration, {yast} will install all recommended packages.
 This can significantly increase the installation size of the system.
-To only install required packages, open the [path]``/etc/zypp/zypp.conf`` configuration file and set thes variables:
+To only install required packages, open the [path]``/etc/zypp/zypp.conf`` configuration file and set these variables:
 ----
 solver.onlyRequires = true
 installRecommends = false
