Initial structure setup

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -31,6 +31,7 @@ ifndef::backend-pdf[]
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 // Content Lifecycle
 ** xref:content-lifecycle.adoc[Content Lifecycle Management]
+*** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
 ** Tuning
 *** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** Maintenance Window
@@ -108,6 +109,8 @@ include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
 // Content Lifecycle
 
 include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+1]
+
+include::modules/administration/pages/content-lifecycle-examples.adoc[leveloffset=+2]
 
 // Tuning
 include::modules/administration/pages/tuning-changelogs.adoc[leveloffset=+1]
