--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -7,10 +7,11 @@
 {productname} enables you to manage large sets of Linux systems and keep them up to date, with automated software management, asset management, and system provisioning.
 {productname} allows you to maintain a high level of security while effectively managing system life-cycle requirements.
 
-{productname} uses _Salt_ to provide event-driven configuration and management control.
+{productname} uses [#salt.gloss]*Salt* to provide event-driven configuration and management control.
 The Salt-master orchestrates thousands of Salt clients ({productname} Clients) using remote execution.
 
 {productname} offers seamless management of {sle}, {rhel}, Ubuntu, CentOS, and Scientific Linux client systems and is fully compatible with Red Hat Satellite Server.
+
 
 // SUMA index content
 ifeval::[{suma-content} == true]
