--- a/modules/administration/pages/content-lifecycle-filters.adoc
+++ b/modules/administration/pages/content-lifecycle-filters.adoc
@@ -1,6 +1,5 @@
 = Content Lifecycle Filter Use Cases
 :experimental:
-:draft:
 
 
 
@@ -18,7 +17,7 @@ you will create a filter that excludes all patches released after the desired da
 .Procedure: Create the "By Date" Filter
 . Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
 
-. Enter a Filter Name such as __Exclude patches by date__ and from the dropdown select **Patch (issued after)**
+. Enter a Filter Name such as __Exclude patches by date__ and then from the dropdown select **Patch (issued after)**
 as the Filter Type.
 
 . Select the date and time, in this case: __August 1st, 2019 00:00am__ and click on btn:[Save].
@@ -27,7 +26,7 @@ The filter is now saved and may be used for your Projects.
 
 
 
-=== Adding Filters to a Project
+=== Add Filters to a Project
 
 .Procedure: Add a Filter to a Project
 
@@ -89,20 +88,25 @@ is used in addition to the by __date filter__ that was use previously.
 
 === Include a Patch
 
-Scenario: Include a Patch:: You receive a call from your Security Team.
-They inform you that an important security fix was released several days after __August 1st__.
-You are told the name of this patch is **SUSE-15-2019-2071** and that it should be included in the next patch cycle.
+.Scenario: Include a Patch
+You receive a call from your Security Team.
+They inform you that an important security patch was released several days after __August 1st__.
+The name of the new patch is **SUSE-15-2019-2071**. You need to include this new patch into your next patch cycle.
 
 [IMPORTANT]
 ====
-The *Allow* Filters option enables you to select patches from the full source and add them
-to a previous environment overriding the *Deny* filter.
+Use the btn:[Allow] Filters rule to select patches from a full source and add them to a previous environment.
+The btn:[Allow] filters rule overrides the exclude function of the btn:[Deny] filter rule.
 ====
 
 .Procedure: Include a Patch
 . Go to menu:Main Menu:[Content Lifecycle > Filters] and click on btn:[Create Filter].
 
-. Enter as __Filter Name__ **Include kernel security fix** then select **Patch (matches Advisory Name)** as __Filter Type__.
+. Enter a __Filter Name__ such as **Include kernel security fix**.
+
+. Select **Patch (Advisory Name)** as the __Filter Type__.
+
+. Select *equals* or *matches* as the __Matcher__.
 
 . Enter **SUSE-15-2019-2071** as Advisory name, click on the btn:[Allow] radio button.
 
