--- a/README.adoc
+++ b/README.adoc
@@ -57,8 +57,8 @@ The wiki contains information about word usage, markup conventions, our docs too
 
 
 
-[suma.doc.contribution]
-== Contributing
+[suma.doc.first.contribution]
+== First Contribution
 
 To contribute to SUSE Manager documentation:
 
@@ -111,6 +111,8 @@ git push --set-upstream origin <branchname>
 
 . Create a pull request (PR) by navigating to https://github.com/SUSE/doc-susemanager and clicking on [btn]``Compare and Create Pull Request``.
 Write an informative commit message detailing your changes, choose reviewers, and save your PR.
+If you haven't yet finished the work you want to do, make sure you create a Draft PR by selecting it from the drop down box in the github web UI.
+This lets your reviewers know that you haven't finished work yet, while still being transparent about what you are working on, and making sure we all understand current progress.
 
 
 [NOTE]
@@ -132,6 +134,94 @@ This allows people to review the PR, but notifies reviewers that you have not co
 * _Do not_ merge a PR until you have received the following approvals:
 ** For a technical change, approval from at least one SME
 ** For all changes, approval from at least one other member of the documentation team
+
+
+[suma.doc.second.contribution]
+== Second Contribution
+
+Once you have checked out the repo and want to keep working on things, you need to ensure that your local copy of the repo remains up to date.
+If you don't do this, you *will* end up with merge conflicts.
+
+Every day, before you begin work, update your copy of master:
+
+. Check out the ``/master`` branch:
++
+----
+git checkout master
+----
+You will get a message like this:
++
+----
+Switched to branch 'master'
+Your branch is up to date with 'origin/master'.
+----
++
+[IMPORTANT]
+====
+BEWARE! This is usually a lie!
+====
++
+. Fetch all current branches:
++
+----
+git fetch --all
+----
+. Update your local copy to match the remotes:
++
+----
+git pull -ff
+----
+
+Now you can go ahead and check out the branch you are working on.
+
+Doing this regularly as you are working will mean you keep your local copies up to date and avoid conflicts.
+You should do it at least every day before you begin work, and again whenever you switch branches.
+
+For example, you are working on two separate pieces of content, one in the ``feature_1`` branch, and the other in the ``feature_2`` branch:
+
+. Start your day by checking out master, fetching the branches, and updating your local copy:
++
+----
+git checkout master
+git fetch --all
+git pull -ff
+----
+. Begin work on the first piece of content by creating a new feature branch:
++
+----
+git checkout -b feature_1
+----
+. Make your changes for Feature 1, then commit them to your branch:
++
+----
+git commit -m "Content for Feature 1"
+git push
+----
+. Make a PR for Feature 1, by navigating to https://github.com/SUSE/doc-susemanager and clicking on [btn]``Compare and Create Pull Request``.
+Write an informative commit message detailing your changes, choose reviewers, and save your PR.
+If you haven't yet finished the work you want to do on Feature 1, make sure you create a Draft PR by selecting it from the drop down box in the github web UI.
+That way, you can come back to Feature 1 later on.
+. Switch your local copy back to master, and update your local copy again:
++
+----
+git checkout master
+git fetch --all
+git pull -ff
+----
+. Now you can start work on Feature 2:
++
+----
+git checkout -b feature_2
+----
+. When you're finished on Feature 2, commit your changes and create another PR, just the same as you did for Feature 1.
+
+[WARNING]
+====
+Never leave feature branches lying around on your local system.
+Create your PR as soon as possible, and make liberal use of the Draft feature.
+Commit to your feature branch early and often!
+Update your local copy from master whenever you switch branches.
+====
 
 
 
